--- a/index.html
+++ b/index.html
@@ -14,31 +14,40 @@
 		<h1>Calculator</h1>
 	</header>
 	<main>
-		<div id="container">
-			<div id="calculator">
-				<div id="display" class="full-width"></div>
-				<div id="button-7" class="calculator-button">7</div>
-				<div id="button-8" class="calculator-button">8</div>
-				<div id="button-9" class="calculator-button">9</div>
-				<div id="button-plus" class="calculator-button">+</div>
-				<div id="button-4" class="calculator-button">4</div>
-				<div id="button-5" class="calculator-button">5</div>
-				<div id="button-6" class="calculator-button">6</div>
-				<div id="button-minus" class="calculator-button">-</div>
-				<div id="button-1" class="calculator-button">1</div>
-				<div id="button-2" class="calculator-button">2</div>
-				<div id="button-3" class="calculator-button">3</div>
-				<div id="button-multiply" class="calculator-button">*</div>
-				<div id="button-clear" class="calculator-button">C</div>
-				<div id="button-0" class="calculator-button">0</div>
-				<div id="button-equals" class="calculator-button">=</div>
-				<div id="button-divide" class="calculator-button">/</div>
-			</div>
-			<div id="last-result">
-				<h2>Last Expression:</h2>
-				<span id="last-result-display"></span>
-			</div>
-		</div>
+		<div class="calculator">
+  <div class="input" id="input"></div>
+  <div class="buttons">
+    <div class="operators">
+      <div>+</div>
+      <div>-</div>
+      <div>&times;</div>
+      <div>&divide;</div>
+    </div>
+    <div class="leftPanel">
+      <div class="numbers">
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+      </div>
+      <div class="numbers">
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+      </div>
+      <div class="numbers">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+      </div>
+      <div class="numbers">
+        <div>0</div>
+        <div>.</div>
+        <div id="clear">C</div>
+      </div>
+    </div>
+    <div class="equal" id="result">=</div>
+  </div>
+</div>
 	</main>
 	<script src="script.js"></script>
 </body>
