--- a/index.html
+++ b/index.html
@@ -15,37 +15,30 @@
 	</header>
 	<main>
 		<div class="calculator">
-  <div class="input" id="input"></div>
+  <div class="calculator">
+  <div class="screen">15x3</div>
   <div class="buttons">
+    <div class="numbers">
+      <button data-val="9">9</button>
+      <button data-val="8">8</button>
+      <button data-val="7">7</button>
+      <button data-val="6">6</button>
+      <button data-val="5">5</button>
+      <button data-val="4">4</button>
+      <button data-val="3">3</button>
+      <button data-val="2">2</button>
+      <button data-val="1">1</button>
+      <button data-val="clear">C</button>
+      <button data-val=".">.</button>
+      <button data-val="0" href="0">0</button>
+    </div>
     <div class="operators">
-      <div>+</div>
-      <div>-</div>
-      <div>&times;</div>
-      <div>&divide;</div>
+      <button data-val="÷">÷</button>
+      <button data-val="x">x</button>
+      <button data-val="-">-</button>
+      <button data-val="+">+</button>
+      <button data-val="=">=</button>
     </div>
-    <div class="leftPanel">
-      <div class="numbers">
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-      </div>
-      <div class="numbers">
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-      </div>
-      <div class="numbers">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-      </div>
-      <div class="numbers">
-        <div>0</div>
-        <div>.</div>
-        <div id="clear">C</div>
-      </div>
-    </div>
-    <div class="equal" id="result">=</div>
   </div>
 </div>
 	</main>
