--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     </div>
 	</main>
 	<script src="script.js"></script>
+	<footer>
+		<p id="copyright">&copy; Copyright Vanessa Garcia 2022</p>
+	</footer>
 </body>
 
 </html>
