--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<h1>Final JavaScript, "easy calculator".</h1>
+		<h1>JavaScript Final, "easy calculator"</h1>
 	</header>
 	<main>
     <div class="container">
